--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,42 +1,54 @@
-name: 'Build'
+name: 'Release'
 on:
   push:
     branches:
       - main
 jobs:
-  publish:
-    name: Publishing
+  testing:
+    name: Testing
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Build on node v14
+      - name: Build in testing mode
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
       - run: yarn install
       - run: yarn build
       - run: yarn test:cover
-        env:
-          CI: true
 
-      - name: Coveralls
+      - name: Export coverage
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: GitHub Test on Slack
-        if: success()
+  publish:
+    name: Publishing
+    runs-on: ubuntu-latest
+    needs: testing
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build in production mode
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - run: yarn install
+      - run: yarn build:prod
+
+      - name: Notify the authors
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         uses: Ilshidur/action-slack@1.6.2
         with:
-          args: 'Resistor build has been tested, now queues for build if needed'
+          args: 'Circuit build has been tested, now queues for publishing'
 
-      - name: Publish if version has been updated
-        if: success()
+      - name: NPM publish
         uses: pascalgn/npm-publish-action@1.3.8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
