--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build in testing mode
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
       - run: yarn install
@@ -26,30 +26,67 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
-    name: Publishing
+    name: Publish NPM
     runs-on: ubuntu-latest
     needs: testing
+    if: success()
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Build in production mode
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
       - run: yarn install
       - run: yarn build:prod
-
-      - name: Notify the authors
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        uses: Ilshidur/action-slack@1.6.2
-        with:
-          args: 'Circuit build has been tested, now queues for publishing'
 
       - name: NPM publish
         uses: pascalgn/npm-publish-action@1.3.8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: GPM publish
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@hisorange'
+      - run: yarn publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release:
+    name: Release to GitHub
+    runs-on: ubuntu-latest
+    needs: publish
+    if: success()
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Release GitHub
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
+
+
+  notify-success:
+    name: Notify
+    runs-on: ubuntu-latest
+    needs: publish-npm
+    if: success()
+
+    steps:
+     - name: Notify the authors
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_USERNAME: GitHub Circuit Actions
+          SLACK_AVATAR: repository
+        uses: Ilshidur/action-slack@2.1.0
+        with:
+          args: 'New version has been published!'
+
