--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: GPM publish
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
           registry-url: 'https://npm.pkg.github.com'
