--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,7 +77,7 @@ jobs:
   notify-success:
     name: Notify
     runs-on: ubuntu-latest
-    needs: publish-npm
+    needs: publish
     if: success()
 
     steps:
