--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: 'Release'
+name: 'Publish'
 on:
   push:
     branches:
@@ -26,7 +26,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
-    name: Publish NPM
+    name: Publish Packages
     runs-on: ubuntu-latest
     needs: testing
     if: success()
@@ -55,30 +55,14 @@ jobs:
           node-version: 14.x
           registry-url: 'https://npm.pkg.github.com'
           scope: '@hisorange'
-      - run: yarn publish
+      - run: yarn publish --non-interactive
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  release:
-    name: Release to GitHub
-    runs-on: ubuntu-latest
-    needs: publish
-    if: success()
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Release GitHub
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
   notify-success:
-    name: Notify
+    name: Notify Success
     runs-on: ubuntu-latest
-    needs: publish
+    needs: release
     if: success()
 
     steps:
@@ -89,5 +73,22 @@ jobs:
           SLACK_USERNAME: GitHub Circuit Actions
           SLACK_AVATAR: repository
         with:
-          args: 'New version has been published!'
+          args: 'New version has been released!'
+
+
+  notify-error:
+    name: Notify Error
+    runs-on: ubuntu-latest
+    needs: testing
+    if: failure()
+
+    steps:
+      - name: Notify the authors
+        uses: Ilshidur/action-slack@2.1.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_USERNAME: GitHub Circuit Actions
+          SLACK_AVATAR: repository
+        with:
+          args: 'Tests are failing!'
 
