--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,16 @@
 name: 'Publish'
+
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: [ci]
+    types: [completed]
+    branches: [main]
+
 jobs:
   testing:
     name: Testing
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Checkout
@@ -16,9 +20,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
+          cache: yarn
       - run: yarn install
       - run: yarn build
-      - run: yarn test:cover
+      - run: yarn test:ci
 
       - name: Export coverage
         uses: coverallsapp/github-action@master
@@ -58,37 +63,3 @@ jobs:
       - run: yarn publish --non-interactive
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  notify-success:
-    name: Notify Success
-    runs-on: ubuntu-latest
-    needs: publish
-    if: success()
-
-    steps:
-      - name: Notify the authors
-        uses: Ilshidur/action-slack@2.1.0
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_USERNAME: GitHub Circuit Actions
-          SLACK_AVATAR: repository
-        with:
-          args: 'New version has been released!'
-
-
-  notify-error:
-    name: Notify Error
-    runs-on: ubuntu-latest
-    needs: testing
-    if: failure()
-
-    steps:
-      - name: Notify the authors
-        uses: Ilshidur/action-slack@2.1.0
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_USERNAME: GitHub Circuit Actions
-          SLACK_AVATAR: repository
-        with:
-          args: 'Tests are failing!'
-
