--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,41 @@
-name: 'Release'
+name: 'GitHub Release'
+
 on:
-  push:
-    tags:
-      - "v*"
+  workflow_run:
+    workflows: [publish]
+    branches: [main]
+    types: [completed]
 
 jobs:
+
   release:
-    name: Release to GitHub
+    name: Release GH
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: Release GitHub
-        uses: softprops/action-gh-release@v1
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  notify:
+    name: Notify
+    runs-on: ubuntu-latest
+    needs: release
+    if: success()
+
+    steps:
+      - name: Notify the authors
+        uses: Ilshidur/action-slack@2.1.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_USERNAME: GitHub Actions
+          SLACK_AVATAR: repository
+        with:
+          args: 'New version has been released [${{ github.repository }}]'
+
