--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,72 @@ jobs:
       - name: Final Test > InMemory Transport
         run: yarn test:ci
 
+
+  publish:
+    name: Publish Packages
+    runs-on: ubuntu-latest
+    needs: testing
+    if: ${{ success() && github.ref == 'refs/heads/main' }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build in production mode
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+      - run: yarn install
+      - run: yarn build:prod
+
+      - name: NPM publish
+        uses: pascalgn/npm-publish-action@1.3.8
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: GPM publish
+        if: success()
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@hisorange'
+      - run: yarn publish --non-interactive
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release:
+    name: Release GH
+    runs-on: ubuntu-latest
+    needs: publish
+    if: ${{ success() }}
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  notify:
+    name: Notify
+    runs-on: ubuntu-latest
+    needs: release
+    if: success()
+
+    steps:
+      - name: Notify the authors
+        uses: Ilshidur/action-slack@2.1.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_USERNAME: GitHub Actions
+          SLACK_AVATAR: repository
+        with:
+          args: 'New version has been released [${{ github.repository }}]'
+
+
+
