--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,10 +105,13 @@ jobs:
     - run: "export RELEASE_NAME=$(echo $GIT_COMMIT_MESSAGE_SUBJECT_SANITIZED | sed -r 's/Release //')"
     - run: "export RELEASE_TAG=$(echo $GIT_COMMIT_MESSAGE_SUBJECT_SANITIZED | sed -r 's/Release /v/')"
 
+    - run: "echo $RELEASE_TAG"
+    - run: echo ${{ env.RELEASE_TAG }}
+
     - name: Create release
-      uses: softprops/action-gh-release@v1
+      uses: actions/create-release@v1
       with:
-        name: ${{ env.RELEASE_NAME }}
+        release_name: ${{ env.RELEASE_NAME }}
         tag_name: ${{ env.RELEASE_TAG }}
         draft: false
         prerelease: false
