--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: GPM publish
-        if: success()
+        if: ${{ steps.['NPM publish'].outputs.changed }}
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
@@ -93,7 +93,7 @@ jobs:
     name: Release GH
     runs-on: ubuntu-latest
     needs: publish
-    if: ${{ success() }}
+    if: ${{ jobs.publish.steps.['NPM publish'].outputs.changed }}
 
     steps:
     - name: Checkout
@@ -123,7 +123,7 @@ jobs:
     name: Notify
     runs-on: ubuntu-latest
     needs: release
-    if: success()
+    if: ${{ jobs.publish.steps.['NPM publish'].outputs.changed }}
 
     steps:
       - name: Notify the authors
