--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,13 +73,14 @@ jobs:
       - run: yarn build:prod
 
       - name: NPM publish
+        id: npm-publish
         uses: pascalgn/npm-publish-action@1.3.8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: GPM publish
-        if: ${{ steps.['NPM publish'].outputs.changed }}
+        if: ${{ steps.npm-publish.outputs.changed }}
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
@@ -93,7 +94,7 @@ jobs:
     name: Release GH
     runs-on: ubuntu-latest
     needs: publish
-    if: ${{ jobs.publish.steps.['NPM publish'].outputs.changed }}
+    if: ${{ jobs.publish.steps.npm-publish.outputs.changed }}
 
     steps:
     - name: Checkout
@@ -123,7 +124,7 @@ jobs:
     name: Notify
     runs-on: ubuntu-latest
     needs: release
-    if: ${{ jobs.publish.steps.['NPM publish'].outputs.changed }}
+    if: ${{ jobs.publish.steps.npm-publish.outputs.changed }}
 
     steps:
       - name: Notify the authors
