--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,9 +78,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - run: |
+          echo "IS_CHANGED=${{ steps.npm-publish.outputs.changed }}" >> $GITHUB_ENV
+
 
       - name: GPM publish
-        if: ${{ steps.npm-publish.outputs.changed }}
+        if: ${{ env.IS_CHANGED }}
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
@@ -94,7 +97,7 @@ jobs:
     name: Release GH
     runs-on: ubuntu-latest
     needs: publish
-    if: ${{ jobs.publish.steps.npm-publish.outputs.changed }}
+    if: ${{ env.IS_CHANGED }}
 
     steps:
     - name: Checkout
@@ -124,7 +127,7 @@ jobs:
     name: Notify
     runs-on: ubuntu-latest
     needs: release
-    if: ${{ jobs.publish.steps.npm-publish.outputs.changed }}
+    if: ${{ env.IS_CHANGED }}
 
     steps:
       - name: Notify the authors
