--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
 
 
       - name: GPM publish
-        if: ${{ env.IS_CHANGED }}
+        if: ${{ IS_CHANGED }}
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
@@ -97,7 +97,7 @@ jobs:
     name: Release GH
     runs-on: ubuntu-latest
     needs: publish
-    if: ${{ env.IS_CHANGED }}
+    if: ${{ IS_CHANGED }}
 
     steps:
     - name: Checkout
@@ -127,7 +127,7 @@ jobs:
     name: Notify
     runs-on: ubuntu-latest
     needs: release
-    if: ${{ env.IS_CHANGED }}
+    if: ${{ IS_CHANGED }}
 
     steps:
       - name: Notify the authors
