--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,26 +78,26 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      - run: |
-          echo "IS_CHANGED=${{ steps.npm-publish.outputs.changed }}" >> $GITHUB_ENV
-
 
       - name: GPM publish
-        if: ${{ IS_CHANGED }}
+        if: ${{ steps.npm-publish.outputs.changed }}
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
           registry-url: 'https://npm.pkg.github.com'
           scope: '@hisorange'
-      - run: yarn publish --non-interactive
+        run: yarn publish --non-interactive
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    outputs:
+      changed: ${{ steps.npm-publish.outputs.changed }}
 
   release:
     name: Release GH
     runs-on: ubuntu-latest
     needs: publish
-    if: ${{ IS_CHANGED }}
+    if: ${{ needs.publish.outputs.changed }}
 
     steps:
     - name: Checkout
@@ -126,8 +126,8 @@ jobs:
   notify:
     name: Notify
     runs-on: ubuntu-latest
-    needs: release
-    if: ${{ IS_CHANGED }}
+    needs: [publish, release]
+    if: ${{ needs.publish.outputs.changed }}
 
     steps:
       - name: Notify the authors
