--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,14 +80,14 @@ jobs:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
       - name: GPM publish
-        if: ${{ steps.npm-publish.outputs.changed }}
+        if: ${{ steps.npm-publish.outputs.changed == true }}
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
           registry-url: 'https://npm.pkg.github.com'
           scope: '@hisorange'
       - run: yarn publish --non-interactive
-        if: ${{ steps.npm-publish.outputs.changed }}
+        if: ${{ steps.npm-publish.outputs.changed == true }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -98,7 +98,7 @@ jobs:
     name: Release GH
     runs-on: ubuntu-latest
     needs: publish
-    if: ${{ needs.publish.outputs.changed }}
+    if: ${{ needs.publish.outputs.changed == true }}
 
     steps:
     - name: Checkout
