--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
     name: Release GH
     runs-on: ubuntu-latest
     needs: publish
-    if: ${{ success() && needs.publish.outputs.changed == true }}
+    if: ${{ success() && needs.publish.outputs.changed == 'true' }}
 
     steps:
     - name: Checkout
@@ -138,7 +138,7 @@ jobs:
     name: Notify
     runs-on: ubuntu-latest
     needs: [publish, release]
-    if: ${{ success() &&  needs.publish.outputs.changed }}
+    if: ${{ success() }}
 
     steps:
       - name: Notify the Author(s)
