--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,6 @@ jobs:
 
     outputs:
       commit_message: ${{ env.GIT_COMMIT_MESSAGE_SUBJECT }}
-      release_name: echo "$(echo ${{ env.GIT_COMMIT_MESSAGE_SUBJECT }} | sed -r 's/Release /v/')"
 
   # Run publish only when the branch is matches, and the commit message could match a release pattern.
   publish:
@@ -113,6 +112,7 @@ jobs:
 
     outputs:
       changed: ${{ steps.npm-publish.outputs.changed == 'true' }}
+      version: ${{ steps.npm-publish.outputs.version }}
 
   release:
     name: Release GH
@@ -127,8 +127,8 @@ jobs:
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        name: ${{ needs.tests.outputs.release_name }}
-        tag_name: ${{ needs.tests.outputs.release_name }}
+        name: ${{ needs.publish.outputs.version }}
+        tag_name: ${{ needs.publish.outputs.version }}
         draft: false
         prerelease: false
       env:
@@ -149,7 +149,7 @@ jobs:
           SLACK_USERNAME: GitHub Release Notification
           SLACK_AVATAR: sender
         with:
-          args: '[${{ github.repository }}] Published the release [${{ needs.tests.outputs.release_name }}]'
+          args: '[${{ github.repository }}] Published the release [${{ needs.publish.outputs.version }}]'
 
 
 
