--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
   "scripts": {
     "test": "jest --collectCoverage=0 --runInBand",
     "test:ci": "jest --runInBand",
-    "pretest:ci": "eslint .",
-    "lint": "eslint --fix .",
     "build": "rimraf build && tsc -p tsconfig.dev.json",
     "build:watch": "rimraf build && tsc -p tsconfig.dev.json --watch",
     "build:prod": "rimraf build && tsc -p tsconfig.prod.json"
@@ -43,22 +41,12 @@
     "@types/ioredis": "~4.26.6",
     "@types/jest": "^26.0.0",
     "@types/node": "^15.0.2",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.3",
-    "prettier": "^2.3.2",
     "ts-jest": "^27.0.2",
-    "typescript": "^4.2.4"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@hisorange/resistor": "^1.1.6",
-    "ts-deepmerge": "^2.0.2",
-    "tslib": "^2.3.0",
-    "uuid": "^8.3.2"
+    "@hisorange/resistor": "^2.1.0"
   },
   "optionalDependencies": {
     "ioredis": "~4.27.6"
