--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Expose GIT Commit Data
-        uses: rlespinasse/git-commit-data-action@v1.x
+        uses: rlespinasse/git-commit-data-action@v1.5.0
 
       - name: Install the Interpreter
         uses: actions/setup-node@v3
@@ -51,6 +51,7 @@ jobs:
 
       - name: Install Dependencies
         run: yarn install
+
       - name: Execute the Development Build
         run: yarn build
 
@@ -97,7 +98,7 @@ jobs:
 
       - name: Publish to NPM
         id: npm-publish
-        uses: pascalgn/npm-publish-action@1.3.8
+        uses: pascalgn/npm-publish-action@1.3.9
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
